# SegurancaInformacao-IFPR-2025

./: ArquivosCreator.py  CriptografiaPythonBasico.ipynb  Criptografia_Simétrica.ipynb  Decriptador.py  Encriptador.py  Interface.py  KeyManipulation.py  Main.py  README.md  exercicio2.ipynb  main.py  plaintext.txt
AES_exercício/: CriptografiaPythonBasico.ipynb  Decriptador.py  Encriptador.py  Main.py  Pagina.py  gerar_metadata.py  verificar_integridade.py
AES_exercício/criptografia/: Dockerfile  docker-compose.yml  pyproject.toml
AES_exercício/criptografia/criptografia/: ArquivosCreator.py  Decriptador.py  Encriptador.py  Main.py  Pagina.py  entrypoint.sh  gerar_metadata.py  verificar_integridade.py
ChavesAssimetricas/: chavesAssimetricas.py
CriptografiaClassica/: MatrizOperations.py
VerificacaoDeIntegridade/: encrypt_aes.py  gerar_metadata.py  main.py  plaintext.txt  verificar_integridade.py
