[tool.poetry]
name = "criptografia"
version = "0.1.0"
description = ""
authors = ["Barradas13 <febarradas13@gmail.com>"]
readme = "README.md"
packages = [{ include = "criptografia" }]

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.28.3"
cryptography = "^45.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
